fix: Ensure items don’t overflow hamburger menu
#32

--- a/_sass/open-project-header-footer.scss
+++ b/_sass/open-project-header-footer.scss
@@ -243,6 +243,7 @@ body > .underlay > header {
     transition: transform .2s ease-out;
 
     height: 100vh;
+    overflow: hidden;
     z-index: 10;
     color: white;
     background: rgba($primary-dark-color, 0.95);
